# YDBPosix

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  _POSIX.m  _ydbposix.m  _ydbposixtest.m  copyright.py  libmath.ref  needs_copyright.sh  posixtest.m  pre-commit  ydbposix.c  ydbposix.xc.in  ydbposixso.cmake
ci/: build.sh
doc/: Makefile  conf.py  htmlpatch.csh  index.rst  ydbposix.rst
doc/_static/css/: custom.css
